Changes since version 1.0.1
---------------------------

- Update to the library versioning scheme:

  On Windows, only the major and minor version are now used, for 
  example: ice11d.dll (11d means 1.1 debug). In 1.0.x, the patch level 
  was included in the version string, for example ice101d.dll.

  On Unix, the internal name (soname) is now constructed as
  lib<name>.so.<major version><minor version>, for example
  libIce.so.11 (for Ice 1.1.x). This internal name identifies a
  symbolic link to lib<name>.so.<full version>, for example:
  libIce.so.11 -> libIce.so.1.1.0. In 1.0.x, the internal name 
  was set to the actual shared library file name, 
  lib<name>.so.<full version>.

- Ice now implements slicing for exceptions and classes: if a process
  receives an exception or class that is of a more derived type than
  the receiver understands, the exception or class is automatically
  sliced. (Previously, this situation resulted in an exception.)

- Class factories are no longer necessary for non-abstract classes
  (that is, for classes that do not have operations). For non-abstract
  classes, the necessary factories are automatically installed by
  the Ice run time. If you have existing code that implements
  factories for non-abstract classes, you can simply delete that code.
  Note that for abstract classes (that is, classes with operations),
  it is necessary to install a factory for each abstract class, exactly
  as in version 1.0.x.

- Factories for user exceptions no longer need to be installed by
  applications, since they are now automatically installed by the Ice
  run time. If you have existing code that implements user exception
  factories, you can simply delete it.

- If a client receives a derived exception for which it does not have
  a user exception factory installed, the client receives the
  exception sliced to a known base exception. In 1.0.x, the client
  would have received NoUserExceptionFactoryException, an exception