@@ -51,7 +51,7 @@ public:
     ~Mutex();
 
     //
-    // Note that lock/trylock & unlock in general should not be used
+    // Note that lock/tryLock & unlock in general should not be used
     // directly. Instead use Lock & TryLock.
     //
  
@@ -60,7 +60,7 @@ public:
     //
     // Returns true if the lock was acquired, and false otherwise.
     //
-    bool trylock() const;
+    bool tryLock() const;
 
     void unlock() const;
 
@@ -138,7 +138,7 @@ Mutex::lock() const
 }
 
 inline bool
-Mutex::trylock() const
+Mutex::tryLock() const
 {
     if(!TryEnterCriticalSection(&_mutex))
     {
@@ -225,7 +225,7 @@ Mutex::lock() const
 }
 
 inline bool
-Mutex::trylock() const
+Mutex::tryLock() const
 {
     int rc = pthread_mutex_trylock(&_mutex);
     if(rc != 0 && rc != EBUSY)
