@@ -44,7 +44,7 @@ public:
     ~RecMutex();
 
     //
-    // Note that lock/trylock & unlock in general should not be used
+    // Note that lock/tryLock & unlock in general should not be used
     // directly. Instead use Lock & TryLock.
     //
     
@@ -53,7 +53,7 @@ public:
     //
     // Returns true if the lock was acquired, and false otherwise.
     //
-    bool trylock() const;
+    bool tryLock() const;
 
     
     void unlock() const;
