@@ -1,6 +1,12 @@
 Changes since version 1.0.1
 ---------------------------
 
+- In IceUtil, all try and timed function now return false when the
+  resource could not be acquired (an expected failure). 
+  The 'Try' from timedTry functions was removed, and for consistency
+  trylock, readlock and writelock functions were renamed tryLock, 
+  readLock and writeLock. 
+
 - Update to the library versioning scheme:
 
   On Windows, only the major and minor version are now used, for 
